# chat-quic-rust

./: Cargo.toml  README.md  rust-toolchain.toml
client/: Cargo.toml
client/src/: client_lib.rs  client_listen.rs  main.rs
common/: Cargo.toml
common/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs  server.rs
server/src/sessions/: client_session.rs  mod.rs  server_session.rs
