[package]
name = "client"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
clap.workspace = true
tokio.workspace = true
env_logger.workspace = true
dotenv.workspace = true
log.workspace = true
s2n-quic.workspace = true
actix-rt.workspace = true
actix.workspace = true
async-stream.workspace = true
bytes.workspace = true

common = { path = "../common" }
