[package]
name = "server"
version = "0.1.0"
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
env_logger = { workspace = true }
dotenv = { workspace = true }
log = { workspace = true }
s2n-quic = { workspace = true }
ulid = { workspace = true }
bytes = { workspace = true }
actix = "0.13.3"
clap = { version = "4.5.4", features = ["derive"] }
async-stream = "0.3.5"
actix-rt = "2.9.0"
futures = "0.3.30"
