[package]
name = "server"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio.workspace = true
env_logger.workspace = true
dotenv.workspace = true
log.workspace = true
s2n-quic.workspace = true
ulid.workspace = true
bytes.workspace = true
actix.workspace = true
actix-rt.workspace = true
clap.workspace = true
async-stream.workspace = true
futures = "0.3.30"
common = { path = "../common" }
